# CTCI-GT-CPP

./: CMakeLists.txt  CMakeSettings.json  Example.hpp  README.md
cmake/: AddGoogleTest.cmake
src/: CMakeLists.txt  Example.cpp  Example.hpp  SortedMerge.cpp  SortedMerge.hpp  template.hpp
test/: AllTests.cpp  CMakeLists.txt  ExampleTests.cpp
